fixed background button contrast

--- a/index.css
+++ b/index.css
@@ -447,6 +447,7 @@ main {
         width: 230px;
         margin: 4vh;
         padding: 3.75vh;
+        background-color: white;
     }
 
     #findScreen{
